--- a/index.html
+++ b/index.html
@@ -298,16 +298,18 @@
                 <div class="category w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                     <nav>
                         <div class="items">
-                            <span class="item cat-card" data-filter="all">All</span>
-                            <span class="item cat-card" data-filter="webdev">Web Development</span>
-                            <span class="item cat-card" data-filter="backend">Back-End Development</span>
-                            <span class="item cat-card" data-filter="uiux">UI/UX Design</span>
+                            <span class="item cat-card mx-2" data-filter="all">All</span>
+                            <span class="item cat-card mx-2" data-filter="webdev">Web Development</span>
+                            <span class="item cat-card mx-2" data-filter="backend">Back-End Development</span>
+                            <span class="item cat-card mx-2" data-filter="uiux">UI/UX Design</span>
                         </div>
                     </nav>
                 </div>
             </div>
             <div class="flex flex-wrap">
                 <div class="gallery w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+
+                    <!-- Website Development -->
                     <div class="menu-card webdev mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
@@ -318,11 +320,9 @@
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://kencanashop.netlify.app/" target="_blank">Kencana Shop
                                 </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">Kencana Shop is an online store
-                                for Muslimah
-                                fashion products. The website offers a wide range of affordable and stylish items,
-                                including hijabs, dresses, and more. Browse and purchase with ease on the
-                                user-friendly website. Get to know more about the brand, team, and articles.
+                            <p class="font-medium text-base text-secondary text-justify">A web app dedicated to
+                                showcasing an array of affordable and stylish Muslimah fashion essentials, featuring
+                                hijabs, dresses, and more in KencanaShop.
                             </p>
                             <div class="flex">
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
@@ -347,12 +347,9 @@
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://github.com/RazinSyakib43/Cukurin-Aja.git" target="_blank">CukurinAja
                                 </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">CukurinAja is a website that
-                                showcases the
-                                profile of on-demand barbershop service. The website features comprehensive
-                                information about the team, services, prices, gallery, customer testimonials, and
-                                contact details. It serves as a platform to connect with the customers and promote the
-                                brand.
+                            <p class="font-medium text-base text-secondary text-justify">A web app that highlights the
+                                profile and services of CukurinAja. The platform presents in-depth information about the
+                                barbershop and its contact details.
                             </p>
                             <div class="flex">
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
@@ -367,7 +364,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-card backend mb-12 p-4 md:w-1/2">
+                    <div class="menu-card webdev mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/New-ParentCare.git" target="_blank"> <img
@@ -378,13 +375,8 @@
                                     href="https://github.com/RazinSyakib43/New-ParentCare.git" target="_blank">Parent
                                     Care
                                 </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">Parent Care is an online
-                                platform that
-                                provides parenting and mental health consultation for children. The goal is to support
-                                parents in their journey of raising happy and healthy children by offering expert advice
-                                and resources. Parent Care provide a safe and convenient way for parents to access
-                                professional
-                                support and guidance from the comfort of their homes.
+                            <p class="font-medium text-base text-secondary text-justify">A web apps that help parents find
+                                parenting consultations with child psychologists and gain parenting knowledge.
                             </p>
                             <div class="flex">
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
@@ -399,7 +391,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-card backend mb-12 p-4 md:w-1/2">
+                    <div class="menu-card webdev mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank"> <img
@@ -409,12 +401,9 @@
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank">CariKuliner
                                 </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">CariKuliner is a front-end web
-                                application
-                                built using standard ES6 JavaScript code, which incorporates Web Components and Webpack.
-                                It retrieves food data from all over the world using AJAX calls to TheMealDB API and
-                                provides a search feature. Users can search for their favourite foods or explore new
-                                cuisines, making it a great tool for foodies looking for new and exciting recipes.
+                            <p class="font-medium text-base text-secondary text-justify">A web app named CariKuliner,
+                                serving as a food discovery platform and offering a search feature, powered by data
+                                sourced from TheMealDB API.
                             </p>
                             <div class="flex flex-wrap">
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
@@ -427,12 +416,12 @@
                                     <h3 class="font-medium text-white">AJAX</h3>
                                 </div>
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
-                                    <h3 class="font-medium text-white">API</h3>
+                                    <h3 class="font-medium text-white">Fetch API</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="menu-card uiux mb-12 p-4 md:w-1/2">
+                    <div class="menu-card webdev mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/Bookshelf-Apps" target="_blank"> <img
@@ -443,12 +432,9 @@
                                     href="https://github.com/RazinSyakib43/Bookshelf-Apps"
                                     target="_blank">Bookshelf-Apps
                                 </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">Bookshelf Apps is a web
-                                application that allows users to add, move, and delete book data on their bookshelves.
-                                With an intuitive user interface, users can easily organize their books by creating
-                                different shelves and moving books between them. This app is perfect for book lovers who
-                                want to keep track of their reading progress and manage their book collection
-                                efficiently. With Bookshelf Apps, managing your bookshelves has never been easier!
+                            <p class="font-medium text-base text-secondary text-justify">A web app for users to
+                                organize books effortlessly. With an intuitive interface, create, move, and delete books
+                                across shelves. Ideal for book lovers tracking progress and managing collections.
                             </p>
                             <div class="flex flex-wrap">
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
@@ -463,7 +449,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-card uiux mb-12 p-4 md:w-1/2">
+                    <div class="menu-card webdev mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a
@@ -476,12 +462,9 @@
                                     href="https://github.com/RazinSyakib43/Restaurant-Catalogue-with-PWA-Testing-and-Web-Optimized.git"
                                     target="_blank">HungerApps
                                 </a></h3>
-                            <p class="font-medium text-base text-secondary text-justify">HungerApps is a Progressive Web
-                                App built
-                                using ES6 JavaScript and integrated with Webpack for bundling. The app features e2e
-                                testing and displays a catalog of various restaurants in Indonesia sourced from Dicoding
-                                Academy's Restaurant API. Users can easily search, filter, and sort through the catalog
-                                for a seamless dining experience.
+                            <p class="font-medium text-base text-secondary text-justify">A web app that presents
+                                restaurant details sourced from Dicoding Academy's API. Alongside restaurant
+                                information, users can conveniently mark their favorite dining spots for easy access.
                             </p>
                             <div class="flex flex-wrap">
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
@@ -500,7 +483,55 @@
                                     <h3 class="font-medium text-white">E2E</h3>
                                 </div>
                                 <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
-                                    <h3 class="font-medium text-white">API</h3>
+                                    <h3 class="font-medium text-white">Fetch API</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- UI/UX Design -->
+                    <div class="menu-card uiux mb-12 p-4 md:w-1/2">
+                        <div class="bg-slate-100 rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a
+                                    href="https://www.figma.com/file/vqGDLfC6ErUmFMMigXihf9/ProtectMe-Hermes-Team?type=design&node-id=28%3A1827&mode=design&t=Y0oRqWDYbZgUY4ms-1">
+                                    <img src="dist\img\Portfolio\ui-ux/ProtectMe.png"
+                                        target="_blank" alt="HungerApps"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://www.figma.com/file/vqGDLfC6ErUmFMMigXihf9/ProtectMe-Hermes-Team?type=design&node-id=28%3A1827&mode=design&t=Y0oRqWDYbZgUY4ms-1"
+                                    target="_blank">ProtectMe Mobile App
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary text-justify">A UI/UX Design for ProtectMe Mobile apps to protect
+                                individuals from violence or sexual harassment by providing reporting features.
+                            </p>
+                            <div class="flex flex-wrap">
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Figma</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card uiux mb-12 p-4 md:w-1/2">
+                        <div class="bg-slate-100 rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a
+                                    href="https://www.figma.com/file/irI4eN7zOfYvFTkbjclWz4/UI%2FUX-CIT-Cinemas-Website-Design?type=design&node-id=0%3A1&mode=design&t=GRJJosLC1X7dfaAL-1">
+                                    <img src="dist\img\Portfolio\ui-ux/CIT Cinemas.png"
+                                        target="_blank" alt="HungerApps"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://www.figma.com/file/irI4eN7zOfYvFTkbjclWz4/UI%2FUX-CIT-Cinemas-Website-Design?type=design&node-id=0%3A1&mode=design&t=GRJJosLC1X7dfaAL-1"
+                                    target="_blank">CIT Cinemas Website
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary text-justify">A UI/UX Design project for CIT
+                                Cinemas, aimed at enhancing the user experience of a cinema ticket booking website.
+                            </p>
+                            <div class="flex flex-wrap">
+                                <div class="bg-teal-600 rounded p-2 mr-3 mt-5">
+                                    <h3 class="font-medium text-white">Figma</h3>
                                 </div>
                             </div>
                         </div>
@@ -607,41 +638,41 @@
 
     <script src="dist/js/script.js"></script>
 
-        <!-- jquery cdn link  -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- jquery cdn link  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-        <script>
-            //Filtering Portfolio
-            $(document).ready(function () {
+    <script>
+        //Filtering Portfolio
+        $(document).ready(function () {
 
             // Menambahkan class active pada elemen yang diklik, sehingga akan memiliki warna kuning
             $(".cat-card").click(function () {
-            $(this).addClass("active").siblings().removeClass("active");
+                $(this).addClass("active").siblings().removeClass("active");
 
-            // Mengambil nilai atribut "data-filter" dari elemen yang diklik
-            var filter = $(this).attr("data-filter");
+                // Mengambil nilai atribut "data-filter" dari elemen yang diklik
+                var filter = $(this).attr("data-filter");
 
-            // Jika filter bernilai "all", maka semua menu akan ditampilkan
-            if (filter == "all") {
-            $(".menu-card").show(0);
+                // Jika filter bernilai "all", maka semua menu akan ditampilkan
+                if (filter == "all") {
+                    $(".menu-card").show(0);
 
-            // Menu yang ditampilkan adalah semua menu yang ada, dari makanan hingga minuman
-            } else {
-            // Menyembunyikan menu yang tidak sesuai dengan filter yang dipilih
-            $(".menu-card")
-            .not("." + filter)
-            .hide(0);
+                    // Menu yang ditampilkan adalah semua menu yang ada, dari makanan hingga minuman
+                } else {
+                    // Menyembunyikan menu yang tidak sesuai dengan filter yang dipilih
+                    $(".menu-card")
+                        .not("." + filter)
+                        .hide(0);
 
-            // Menampilkan menu yang sesuai dengan filter yang dipilih
-            $(".menu-card." + filter).show(0);
-            }
+                    // Menampilkan menu yang sesuai dengan filter yang dipilih
+                    $(".menu-card." + filter).show(0);
+                }
             });
-            });
-        </script>
+        });
+    </script>
 
-        <!-- magnific popup js cdn link  -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js">
-        </script>
+    <!-- magnific popup js cdn link  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js">
+    </script>
 </body>
 
 </html>
